4.3.5
- demuxer fixes

4.3.4
- Add stub for "subscriptionGrace" HTSP method.
- Add setting to ignore duplicate scheduled recordings (tvh4.3+)

4.3.3
- updated language files from Transifex

4.3.2
- updated language files from Transifex

4.3.1
- updated language files from Transifex

4.3.0
- PVR Addon API 5.10.0: Implemented recording stream read chunk size as addon setting.

4.2.17
- Fix predictive tuning (do not close subscriptions that never were active).

4.2.16
- updated language files from Transifex

4.2.15
- updated language files from Transifex

4.2.14
- PVR API 5.9.0 changes implemented

4.2.12
- Recordings: Use real start time and duration if available.
- Recordings: Add support for season and episode number (tvh4.3+).
- New addon logo.

4.2.11
- Fixed crashes on addon destruction

4.2.10
- PVR API v5.5.0: Implemented GetStreamTimes for recordings

4.2.9
- PVR API v5.5.0: Implemented GetStreamTimes for TV/radio streams
- PVR API v5.8.0: Dropped GetPlayingTime, GetBufferTimeStart, GetBufferTimeEnd, PositionRecordedStream, PositionLiveStream, MoveChannel
- PVR API v5.8.0: Added support for PVR_CHANNEL_GROUP_MEMBER::iSubChannelNumber

4.2.8
- updated language files from Transifex

4.2.7
- Fixed predictive tuning (was broken with removal of API function 'SwitchChannel')
- Added support for subchannel numbers (ATSC) to predictive tuning

4.2.6
- More code cleanup
- Fixed deadlock that may have occured when switching channels
- Added support for new EPG tag attributes: 'credits' (actors, writers, directors), 'categories', 'year' (Thanks to azlm8t for testing and for a fix)
- Added support for new autorec dedup types: 'max once per month', 'unique episode according to EPG/XMLTV'

4.2.5
- updated language files from Transifex

4.2.4
- updated language files from Transifex

4.2.3
- misc code cleanup

4.2.2
- fixed: memory leak. Localized strings obtained from Kodi never were freed.